# torc_lite-1

./: LICENSE  Makefile.in  README  README.md  configure  configure.ac
demo/: Makefile.am  Makefile.in  async.c  broadcast.c  ex1.c  fibo.c  masterslave.c  mbench1.c  pipe.c  struct.c  zerolength.c
include/: locks.h  queues.h  torc.h  torc_data.h  torc_internal.h  torc_mpi_internal.h  torc_queue.h  torcf.h  torcf_config.h  torcf_config.h.in
nullmpi/include/: mpi.h  mpif.h
nullmpi/lib/: nullmpi.c
scripts/: Makefile.in
src/: Makefile.am  Makefile.in  deprecated  torc.c  torc_comm.c  torc_queue.c  torc_runtime.c  torc_server.c  torc_thread.c
